LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/Account_Product__c.object-meta.xml
<CustomObject>
    <description>AUTO - For use in the ACCTPRODUCT components. These records are generated for an Account when an Opportunity is created. They are primarily modified on the Opportunity during the new sale context, but can be continually modified on Customer Accounts or post-sale Opportunities.</description>
    <label>Account Product</label>
    <nameField>
        <label>Account Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>