LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - The associated Account. There is one set of records with a blank Account that serve as templates and can be modified to change later behavior.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Products</relationshipLabel>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>