LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Accruals_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accruals_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Accrual Accounts addressed with AUTOREC MATCHING.</description>
    <label>Accruals Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>