LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Billings_AR_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Billings_AR_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Billings / AR Accounts addressed by AUTOREC MATCHING.</description>
    <label>Billings / AR Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>