LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Cash_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Cash_Accounts__c</fullName>
    <description>MANUAL - Set using ACCTPRODUCTS components. A momentary reporting of the number of Cash Accounts being used with AUTOREC MATCHING.</description>
    <label>Cash Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>