LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Credit_Card_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Accounts__c</fullName>
    <description>MANUAL - Set using ACCTPRODUCTS component on Opportunity or Account. The number of Credit Cards Accounts being addressed by AUTOREC MATCHING.</description>
    <label>Credit Card Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>