LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Intercompany_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Intercompany_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Intercompany Accounts addressed with AUTOREC MATCHING.</description>
    <label>Intercompany Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>