LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Inventory_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Inventory Accounts addressed with AUTOREC MATCHING.</description>
    <label>Inventory Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>