LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Non_Integrated_Systems_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Non_Integrated_Systems_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Non-Integrated Systems Accounts addressed with AUTOREC MATCHING.</description>
    <label>Non-Integrated Systems Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>