LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Not_Specified_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Not_Specified_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Accounts used by AUTOREC MATCHING that are not specified.</description>
    <label>Not Specified Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>