LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AUTO - This is set by ACCTPRODUCTS_OppyInsertTrigger --&gt; ACCTPRODUCTS_Util. The original Opportunity that generated these Account Products.</description>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Products</relationshipLabel>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>