LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Other_Account_Quantity_Amortization__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Quantity_Amortization__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The quantity for the Other Account (which is specified using a text field) that is being addressed with AUTOREC AMORTIZATION.</description>
    <label>Other Account Quantity - Amortization</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>