LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Other_Account_Quantity_Matching__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Quantity_Matching__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Other Accounts (type specified using another field) addressed by AUTOREC MATCHING.</description>
    <label>Other Account Quantity - Matching</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>