LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Other_Account_Type_Amortization__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Type_Amortization__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. Users can specify an additional &quot;Other&quot; type of Account to be addressed with AUTOREC AMORTIZATION.</description>
    <label>Other Account Type - Amortization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>