LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Other_Account_Type_Matching__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Type_Matching__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. Users can enter an &quot;Other&quot; value in the UI to specify a type of Account that is being addressed with AUTOREC matching.</description>
    <label>Other Account Type - Matching</label>
    <length>50</length>
    <type>Text</type>
</CustomField>