LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/POC_Performed__c.field-meta.xml
<CustomField>
    <fullName>POC_Performed__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. Whether or not a Proof of Concept was performed for AUTOREC MATCHING.</description>
    <label>POC Performed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>