LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Prepaid_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Prepaid_Accounts__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. The number of Prepaid Accounts addressed with AUTOREC AMORTIZATION.</description>
    <label>Prepaid Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>