LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <description>MANUAL - Set by user using the ACCTPRODUCTS components. A semi-colon separated list (checkbox group) with the reasons that a customer did or did not purchase a product.</description>
    <label>Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>