LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>AUTO - This is set by ACCTPRODUCT_Util when the set of Account Products is created. This assists in the ordering in the ACCTPRODUCT_Main component.</description>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>