LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AUTO - Populated by ACCTPRODUCTS components. Indicates whether the Product was purchased or not purchased.</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>