LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Product__c/fields/Technical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Notes__c</fullName>
    <description>MANUAL - Set using the ACCTPRODUCTS component on the Account or Opportunity page. Notes from the Sales Engineer regarding demonstration of the AUTOREC MATCHING Product.</description>
    <label>Technical Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>